# Study_Assistant

./: .gitignore  main.py  pyproject.toml
src/: vectorize_book.py  vectorize_script.py
