[project]
name = "study-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx==0.27.0",
    "langchain-chroma==0.2.5",
    "langchain-community==0.3.29",
    "langchain-groq==0.3.7",
    "langchain-huggingface==0.3.1",
    "langchain-text-splitters==0.3.11",
    "nltk==3.9.1",
    "python-dotenv==1.1.1",
    "sentence-transformers==5.1.0",
    "streamlit==1.49.1",
    "transformers==4.56.0",
    "unstructured[pdf]==0.18.14",
    "youtube-search-python==1.6.6",
]
